Incorporated all the subtopics and topics in Subject page. Now user clicks on any links they will be redirected to the associated the subtopic #2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta
       name="Knowledge Hub"
       content="Knowledge Hub is a knowledge gaining app" />
-      <link rel="icon" href="/favicon.ico">
-      <link rel="stylesheet" href="/src/assets/css/index.scss">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/src/assets/css/index.scss" />
   </head>
   <body>
     <div id="root">
