I'm still working on the bookmarks feature. It's still incomplete and there's a lot of work to do. Currently just pushing the code for testing purposes.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Knowledge Hub</title>
     <meta
-      name="Knowledge Hub"
-      content="Knowledge Hub is a knowledge gaining app" />
+      name="description"
+      content="Knowledge Hub: An app for learning Discrete Math" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/src/assets/css/index.scss" />
   </head>
