Completed integrating pwa feature for the app. Still need some improvments for pwa. Work still in progress.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knowledge Hub</title>
     <meta
       name="description"
       content="Knowledge Hub: An app for learning Discrete Math" />
-    <link rel="icon" href="/favicon.ico" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
     <link rel="stylesheet" href="/src/assets/css/index.scss" />
   </head>
   <body>
